# preguntai

./: README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/routes/: users.py
backend/app/core/: config.py  db.py
backend/app/models/: users.py
backend/app/schemas/: users.py
frontend/pregutai/: package-lock.json  package.json
frontend/pregutai/src/app/pages/: _app.tsx
workflows/: main.yml
