[tool.poetry]
name = "preguntai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
aiosqlite = "^0.18.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
pyjwt = "^2.6.0"
email-validator = "^1.3.1"
typer = {version = "^0.7.0", extras = ["all"]}
fastapi-users = {version = "^10.4.1", extras = ["all"]}
alembic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

